Implement adaptive routing for verification
Co-authored-by: Jon Chambers <63609320+jon-signal@users.noreply.github.com>
Co-authored-by: ravi-signal <99042880+ravi-signal@users.noreply.github.com>